// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expenses 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling
   
  $94.36
</div>
`;

exports[`should render ExpensesSummary with 2 expenses 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling
   
  $94.36
</div>
`;
